@@ -2,7 +2,7 @@
 New configuration settings
 ::::::::::::::::::::::::::
 
-1.18: TimeSyncWait
+1.18: TimeSyncWait, DefaultDecimals, HourlyDecimals, HourlySectionStyle
 
 1.17: (none)
 
