@@ -48,6 +48,9 @@ RateUnit 1
 DefaultDecimals 2
 HourlyDecimals 1
 
+# spacer for separating hourly sections (0 = none, 1 = '|', 2 = '][')
+HourlySectionStyle 2
+
 # try to detect interface maximum bandwidth, 0 = disable feature
 # MaxBandwidth will be used as fallback value when enabled
 BandwidthDetection 1
