@@ -73,6 +73,12 @@ Number of decimals to use in hourly output. Value range: 0..2
 (vnstat only)
 
 .TP
+.B HourlySectionStyle
+Select what kind of spacer is used for separating the numerical sections of the
+hourly output. 0 = none, 1 = '|', 2 = '][', 3 = '[ ]'.
+(vnstat only)
+
+.TP
 .B Interface
 Default interface used when no other interface is specified on
 the command line. (vnstat and vnstati only)
